Fixed gap between navbar__nav items by changing their display property to block from inline-block and floating them left.

--- a/style/_navbar.scss
+++ b/style/_navbar.scss
@@ -157,7 +157,7 @@
             padding: 0;
         }
         .navbar__nav {
-            display: inline-block;
+            float: left;
             line-height: 50px;
             padding: 0 15px;
             &:first-child {
